[package]
name = "meshgridrs"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/jreniel/meshgridrs"
description = "Partial implementation of numpy's meshgrid function for ndarray."
keywords = ["ndarray", "meshgrid"]


[dependencies]
itertools = "0.12.1"
ndarray = "0.15.6"
